--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^5.2.1",
     "react-loading-skeleton": "^3.4.0",
     "react-router-dom": "^6.24.1",
+    "react-toastify": "^10.0.5",
     "sweetalert2": "^11.12.2"
   },
   "devDependencies": {
