--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
 {
   "compilerOptions": {
     "target": "ESNext",
-    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "lib": ["DOM", "DOM.Iterable", "ESNext", "es2015"],
     "module": "ESNext",
     "skipLibCheck": true,
 
