--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,7 @@
 {
   "compilerOptions": {
     "target": "ESNext",
-    // "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "lib": ["DOM", "DOM.Iterable", "ESNext", "es2020"],
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "module": "ESNext",
     "skipLibCheck": true,
 
