--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "axios": "^1.7.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -18,7 +19,8 @@
     "react-loading-skeleton": "^3.4.0",
     "react-router-dom": "^6.24.1",
     "react-toastify": "^10.0.5",
-    "sweetalert2": "^11.12.2"
+    "sweetalert2": "^11.12.2",
+    "zod": "^3.24.0-canary.20240701T200529"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
