--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^5.2.1",
     "react-loading-skeleton": "^3.4.0",
     "react-router-dom": "^6.24.1",
+    "react-select": "^5.8.0",
     "react-toastify": "^10.0.5",
     "sweetalert2": "^11.12.4",
     "zod": "^3.24.0-canary.20240701T200529"
