--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@reduxjs/toolkit": "^2.2.7",
     "axios": "^1.7.2",
     "ethers": "^6.13.2",
     "lottie-react": "^2.4.0",
@@ -19,6 +20,7 @@
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "react-loading-skeleton": "^3.4.0",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
     "react-select": "^5.8.0",
     "react-toastify": "^10.0.5",
