--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.52.1",
     "react-icons": "^5.2.1",
     "react-loading-skeleton": "^3.4.0",
+    "react-otp-input": "^3.1.1",
     "react-paginate": "^8.2.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
