--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-loading-skeleton": "^3.4.0",
     "react-otp-input": "^3.1.1",
     "react-paginate": "^8.2.0",
+    "react-qr-code": "^2.0.15",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1",
     "react-select": "^5.8.0",
