--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "@tanstack/react-query": "^5.56.2",
     "axios": "^1.7.2",
     "ethers": "^6.13.2",
     "lottie-react": "^2.4.0",
